# fluxgate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  run-tests-docker.sh  test.Dockerfile
.github/: FUNDING.yml
.github/workflows/: full-validate.yml  validate.yml
config/: fluxgate.yaml
docs/development/: todo.md
docs/development/features/: authentication.md  configuration.md  error-handling.md  hot-reload.md  observability.md  performance.md  routing.md
docs/development/requirements/: 00-general.md  01-performance.md  02-functional.md  03-configuration.md  04-testing.md  05-cli.md  06-operational.md  07-observability.md  README.md
docs/user/: README.md  authentication.md  configuration.md  deployment.md  logging.md
scripts/: find-requirement.rs  validate-requirements-coverage.rs  validate-requirements-quality.rs
src/: lib.rs  main.rs  proxy.rs
src/config/: jwt.rs  mod.rs
tests/: functional.rs  unit.rs
tests/functional/: auth.rs  cli.rs  common.rs  config_edge.rs  config_loading.rs  config_validation.rs  error_handling.rs  hot_reload.rs  observability.rs  proxy_flow.rs  resilience.rs  shutdown.rs
tests/unit/: common.rs  configuration.rs  functional.rs  jwt_auth.rs  observability.rs  performance.rs
