[package]
name = "fluxgate"
version = "0.1.0"
edition = "2021"
authors = ["Fluxgate Contributors"]
description = "High-performance proxy to LLM providers."
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "sync", "net", "io-util", "signal", "time"] }
reqwest = { version = "0.12.24", features = ["json", "gzip", "brotli", "deflate", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
anyhow = "1.0.100"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
clap = { version = "4.5.51", features = ["derive"] }
axum = "0.7.9"
tower-http = { version = "0.6.6", features = ["trace", "request-id", "util"] }
time = { version = "0.3.44", features = ["formatting"] }
futures-util = "0.3.31"
http-body-util = "0.1.1"
http-body = "1.0.1"
jsonwebtoken = "9.3.0"
base64 = { version = "0.22.0", features = ["alloc"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
nix = { version = "0.30.1", default-features = false, features = ["signal"] }
futures = "0.3.31"
jsonwebtoken = "9.3.0"
serde_json = "1.0"

[[bin]]
name = "validate-requirements-quality"
path = "scripts/validate-requirements-quality.rs"

[[bin]]
name = "validate-requirements-coverage"
path = "scripts/validate-requirements-coverage.rs"

[[bin]]
name = "find-requirement"
path = "scripts/find-requirement.rs"

