[package]
name = "fluxgate"
version = "0.1.0"
edition = "2021"
authors = ["Fluxgate Contributors"]
description = "High-performance proxy to LLM providers."
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "sync", "net", "io-util", "signal", "time"] }
reqwest = { version = "0.12.24", features = ["json", "gzip", "brotli", "deflate", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
anyhow = "1.0.100"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["derive"] }
axum = "0.8.7"
futures-util = "0.3.31"
http-body-util = "0.1.1"
http-body = "1.0.1"
jsonwebtoken = "9.3.1"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
nix = { version = "0.30.1", default-features = false, features = ["signal"] }
futures = "0.3.31"

[[bin]]
name = "validate-requirements-quality"
path = "scripts/validate-requirements-quality.rs"

[[bin]]
name = "validate-requirements-coverage"
path = "scripts/validate-requirements-coverage.rs"

[[bin]]
name = "find-requirement"
path = "scripts/find-requirement.rs"

